# deprecate-kwargs

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.rst  README.md  demo.ipynb  push2pypi.sh  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: check-formatting.yml  publish.yml  run-pytest.yml
deprecate_kwargs/: __init__.py  _dk.py
test/: test_dk.py
