[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deprecate-kwargs"
dynamic = ["version"]
description = "A Tool for Deprecating (Keyword) Arguments for Backward Compatibility for Python Functions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "DeepPSP", email = "wenh06@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]
test = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.urls]
Homepage = "https://github.com/DeepPSP/deprecate-kwargs"

[tool.hatch.version]
path = "deprecate_kwargs/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/deprecate_kwargs",
]
